# fp-GA-architecture

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  arch_template.xml
src/: Architecture.cpp  Architecture.h  CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Parser.cpp  main.cpp
test/: CMakeLists.txt  architecture_test.cpp  geneticalgorithm_test.cpp
